--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <a href="#" class="menu-toggle">☰</a>
       <ul class="nav-links">
-        <li><a href="#home">home</a></li>
+        <li><a href="#home">home BUT CHANGED</a></li>
         <li><a href="#about">about</a></li>
         <li><a href="#contact">contact</a></li>
       </ul>
